--- a/packages/bignumber/Cargo.toml
+++ b/packages/bignumber/Cargo.toml
@@ -12,10 +12,10 @@ license = "Apache-2.0"
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-cosmwasm-std = { version = "1.0.0", features = ["stargate"] }
+cosmwasm-std = { version = "1.1.8", features = ["stargate"] }
 bigint = "4.4.3"
-schemars = "0.8.10"
-serde = { version = "1.0.103", default-features = false, features = ["derive"] }
+schemars = "0.8.11"
+serde = { version = "1.0.148", default-features = false, features = ["derive"] }
 
 [dev-dependencies]
-cosmwasm-schema = "1.0.0-beta"
+cosmwasm-schema = "1.1.8"
