--- a/packages/haloswap/Cargo.toml
+++ b/packages/haloswap/Cargo.toml
@@ -14,15 +14,13 @@ license = "Apache-2.0"
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
+cosmwasm-schema = "1.1.8"
 cw20 = { version = "0.16.0" } 
-cosmwasm-storage = { version = "1.0.0" }
-cosmwasm-std = { version = "1.0.0", features = ["stargate"] }
-schemars = "0.8.10"
-serde = { version = "1.0.103", default-features = false, features = ["derive"] }
-protobuf = { version = "3.2.0", features = ["with-bytes"] }
+cosmwasm-storage = { version = "1.1.8" }
+cosmwasm-std = { version = "1.1.8", features = ["stargate"] }
 
 [dev-dependencies]
-cosmwasm-schema = { version = "1.0.0" }
+cosmwasm-schema = { version = "1.1.8" }
 
 [profile.release]
 opt-level = 3
