change json chema of data struct

--- a/contracts/halo-pair/Cargo.toml
+++ b/contracts/halo-pair/Cargo.toml
@@ -50,6 +50,7 @@ integer-sqrt = "0.1.5"
 cw-storage-plus = "1.0.0"
 cw2 = "0.16.0"
 schemars = "0.8.11"
+serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.37" }
 cw20 = { version = "0.16.0" }
 cw-utils = "1.0.0"
