--- a/contracts/halo-router/Cargo.toml
+++ b/contracts/halo-router/Cargo.toml
@@ -48,6 +48,7 @@ cw-storage-plus = "1.0.0"
 cw2 = "0.16.0"
 cw20 = { version = "0.16.0" }
 schemars = "0.8.11"
+serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.37" }
 getrandom = {version = "0.2.8", default-features = false, features = ["js"]}
 
