--- a/packages/haloswap/Cargo.toml
+++ b/packages/haloswap/Cargo.toml
@@ -18,6 +18,8 @@ cosmwasm-schema = "1.1.8"
 cw20 = { version = "0.16.0" } 
 cosmwasm-storage = { version = "1.1.8" }
 cosmwasm-std = { version = "1.1.8", features = ["stargate"] }
+schemars = "0.8.11"
+serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 
 [dev-dependencies]
 cosmwasm-schema = { version = "1.1.8" }
