--- a/contracts/halo-token/Cargo.toml
+++ b/contracts/halo-token/Cargo.toml
@@ -41,6 +41,7 @@ optimize = """docker run --rm -v "$(pwd)":/code \
 
 [dependencies]
 haloswap = { path = "../../packages/haloswap", default-features = false, version = "0.1.0"}
+halo-factory = { path = "../halo-factory"}
 cosmwasm-schema = "1.1.8"
 cosmwasm-std = "1.1.8"
 cosmwasm-storage = "1.1.8"
@@ -52,6 +53,7 @@ thiserror = { version = "1.0.37" }
 cw20 = {version = "1.0.0"}
 cw20-base = {version = "1.0.0", features = ["library"]}
 getrandom = {version = "0.2.8", default-features = false, features = ["js"]}
+
 
 [dev-dependencies]
 cw-multi-test = "0.16.1"
