--- a/contracts/halo-token/Cargo.toml
+++ b/contracts/halo-token/Cargo.toml
@@ -42,6 +42,8 @@ optimize = """docker run --rm -v "$(pwd)":/code \
 [dependencies]
 haloswap = { path = "../../packages/haloswap", default-features = false, version = "0.1.0"}
 halo-factory = { path = "../halo-factory"}
+halo-pair = { path = "../halo-pair"}
+halo-router = { path = "../halo-router"}
 cosmwasm-schema = "1.1.8"
 cosmwasm-std = "1.1.8"
 cosmwasm-storage = "1.1.8"
